fix reveal drawer overflow. make overflow visible

--- a/css/universal-bar.css
+++ b/css/universal-bar.css
@@ -69,7 +69,7 @@
 	height:100%;
 	transition:left .2s ease;
 	-webkit-overflow-scrolling:touch;
-	overflow:auto;
+	overflow:visible;
 }
 
 .reveal-modal.side-drawer.open{
